Fixing nav on mobile

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -12,7 +12,6 @@ body {
 }
 
 .row-page-start {
-  margin-top: 50px;
   padding-top: 50px;
 
   h3 {
@@ -85,7 +84,23 @@ body {
   text-decoration: none;
 }
 
+.nav-side-menu {
+  box-shadow: 2px 2px 10px rgba(0,0,0,.2);
+  height: 100%;
+  background-color: #303A48;
+  color: white;
+  width: 200px;
+  position: absolute;
+  top: 0;
+  right: -210px;
+  z-index: 1500;
+}
 
+.menu-close {
+  padding: 10px;
+  font-size: 18px;
+  font-weight: 300;
+}
 
 footer .row {
   padding: 25px 50px;
